# clef

./: .gitignore  .vercelignore  API_KEY_SYSTEM.md  CREATE_NPM_ORG.md  DEPLOYMENT.md  FIREBASE_KEY_FIX.md  FIX_PERMISSIONS.md  LICENSE  MANIFEST.in  PRIVATE_KEY_FORMAT.md  PUBLISHING_GUIDE.md  QUICK_PUBLISH.md  README.md  SETUP_GUIDE.md  SYNCHRONIZED_HANDS_FEATURE.md  TEST_RESULTS.md  TROUBLESHOOTING.md  env.example  next.config.js  package-lock.json  package.json  pyproject.toml  system-prompt.txt  test_demo.clef  test_liszt.clef  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/dashboard/: page.tsx
app/docs/: page.tsx
clef/: __init__.py  cli.py  grammar.lark
clef/ast/: __init__.py  nodes.py
clef/backends/: __init__.py  base.py  fluidsynth_backend.py  midi_backend.py
clef/engine/: __init__.py  compiler.py  events.py
clef/parser/: __init__.py  parser.py
clef/semantic/: __init__.py  analyzer.py
clef/transcribe/: __init__.py  generator.py  omr.py  pdf_reader.py  transcriber.py
edpear-sdk/: package-lock.json  package.json
edpear-sdk/src/: cli.ts  index.ts
examples/: advanced-usage.ts  basic-usage.js  chat-bot.js  chords.clef  dynamics_and_articulation.clef  fur_elise_excerpt.clef  grace_notes_and_ornaments.clef  math-tutor.js  multiple_staves.clef  pedal.clef  polyphony.clef  simple_melody.clef  ties_and_slurs.clef  time_signature_changes.clef  tuplets.clef
lib/: api-service.ts  email-service.ts  firebase-admin.ts  firebase-auth-api.ts  types.ts
scripts/: deploy.ps1  extract-firebase-key.js  generate-secrets.js  publish.ps1  publish.sh  test-api-request.js
test-libraries/: README.md  package-lock.json  package.json  test-cli.js  test-full-workflow.js  test-sdk-api.js  test-sdk.js
tests/: __init__.py  test_engine.py  test_parser.py  test_playback.py  test_semantic.py
vscode-extension/: README.md  language-configuration.json  package.json
(+23 files in other folders)
