[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clef-lang"
version = "0.1.0"
description = "A notation-complete music programming language"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Clef Contributors"}
]
keywords = ["music", "notation", "programming-language", "midi", "fluidsynth"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Topic :: Artistic Software",
]

dependencies = [
    "lark>=1.1.0",
    "pyfluidsynth>=1.3.0",
    "midiutil>=1.2.1",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
clef = "clef.cli:main"

[project.urls]
Homepage = "https://github.com/clef-lang/clef"
Documentation = "https://github.com/clef-lang/clef#readme"
Repository = "https://github.com/clef-lang/clef"
Issues = "https://github.com/clef-lang/clef/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["clef*"]

[tool.setuptools.package-data]
clef = ["grammar.lark"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

